# DecentralizedAI

./: README.md
common/data_loader/: CMakeLists.txt  package.xml
common/data_loader/scripts/: dataset.py
common/messages/dataset_msgs/: CMakeLists.txt  package.xml
common/messages/dataset_msgs/srv/: GetDataset.srv
common/messages/model_msgs/: CMakeLists.txt  package.xml
common/messages/model_msgs/srv/: GetCombinedWeights.srv  SetScaledWeights.srv
common/models/: CMakeLists.txt  package.xml  setup.py
common/models/scripts/models/: model.py
common/utils/: CMakeLists.txt  package.xml  setup.py
common/utils/scripts/utils/: utils.py
dist_lr_ros/: #README.md#  .#README.md  CMakeLists.txt  README.md  package.xml
dist_lr_ros/launch/: simple.launch
dist_lr_ros/msg/: TokenQueue.msg
dist_lr_ros/scripts/: tokens.py  worker.py
fed_lr_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt
fed_lr_ros/launch/: client.launch  example.launch  server.launch  simple.launch
fed_lr_ros/msg/: Sample.msg
fed_lr_ros/scripts/: client.py  dataset.py  model.py  server.py  utils.py
fed_lr_ros/srv/: GetCombinedWeights.srv  GetDataset.srv  SetScaledWeights.srv
gossip_lr_ros/: CMakeLists.txt  README.md  package.xml
gossip_lr_ros/launch/: client.launch  example.launch
gossip_lr_ros/msg/: Token.msg  TokenQueue.msg
gossip_lr_ros/scripts/: client.py  tokens.py
swarm_lr_ros/: CMakeLists.txt  README.md  package.xml
swarm_lr_ros/launch/: simple.launch
swarm_lr_ros/scripts/: tokens.py  worker.py
tf_privacy/: README.md  dataset.py  model.py  train.py  utils.py
