<?xml version="1.0"?>
<package format="2">
  <name>gossip_lr_ros</name>
  <version>0.0.2</version>
  
  <description>The Gossip Learning (GL) ROS package</description>
  <maintainer email="andreas.persson@ai.se">Andreas Pdersson</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dataset_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>model_msgs</build_depend>
  <build_depend>models</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>utils</build_depend>

  <build_export_depend>dataset_msgs</build_export_depend>
  <build_export_depend>model_msgs</build_export_depend>
  <build_export_depend>models</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>utils</build_export_depend>

  <exec_depend>dataset_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>model_msgs</exec_depend>
  <exec_depend>models</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>utils</exec_depend>

  <export>
  </export>
</package>
