<?xml version="1.0"?>
<package format="2">
  <name>models</name>
  <version>0.0.1</version>
  
  <description>A package for common TensorFlow 'models'.</description>
  <maintainer email="andreas.persson@ai.se">Andreas Pdersson</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
